--- a/_config.yml
+++ b/_config.yml
@@ -264,10 +264,7 @@ display_categories: ["external-services"] # these categories will be displayed o
 # -----------------------------------------------------------------------------
 
 scholar:
-  last_name: [Einstein]
-  first_name: [Albert, A.]
-
-  style: apa
+  style: chicago
   locale: en
 
   source: /_bibliography/
