--- a/_config.yml
+++ b/_config.yml
@@ -279,9 +279,9 @@ scholar:
   details_dir: bibliography
   details_link: Details
 
-  # query: "@*"
-  # group_by: year
-  # group_order: descending
+  query: "@*"
+  group_by: year
+  group_order: descending
 
 # Display different badges withs stats for your publications
 # Customize badge behavior in _layouts/bib.liquid
