--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 # -----------------------------------------------------------------------------
 
 title: blank # the website title (if blank, full name will be used instead)
-first_name: Lichess Bibliography
+first_name: Lichess Science and Engineering
 middle_name:
 last_name:
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
